--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@sap/hana-client": "^2.4.155",
+    "async-waterfall": "^0.1.5",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "gridfs": "^1.0.0",
     "gridfs-stream": "^1.1.1",
